# VoxelEngine

./: .gitignore  BuildDebug.bat  BuildRelease.bat  CMakeLists.txt  clean.bat
inc/util/: memory.hpp
src/core/: engine.cpp
